@@ -1509,6 +1509,24 @@ A complete version of EDGE is available as a variety of packages that can fit in
 
 						</fieldset>
 					</div>
+					<div class="ui-field-contain">
+						<fieldset data-role="controlgroup" data-mini="true" data-type="horizontal">
+							<legend>Homopolymer Filter<a href="#" class="tooltip ui-btn  ui-corner-all ui-nodisc-icon ui-btn-inline ui-icon-info ui-btn-icon-notext my-tooltip-btn" title="filter the INDELs variants < 0.8 INDEL Threshold in homopolymer (>= 4bp) region" ></a></legend>
+							<input type="radio" data-mini="true" name="edge-r2g-con-homopolymer-filter" id="edge-r2g-con-homopolymer-filter-sw1" value="1">
+							<label for="edge-r2g-con-homopolymer-filter-sw1">Yes</label>
+							<input type="radio" data-mini="true" name="edge-r2g-con-homopolymer-filter" id="edge-r2g-con-homopolymer-filter-sw2" value="0" checked='checked'>
+							<label for="edge-r2g-con-homopolymer-filter-sw2">No</label>
+						</fieldset>
+					</div>
+					<div class="ui-field-contain">
+						<fieldset data-role="controlgroup" data-mini="true" data-type="horizontal">
+							<legend>StrandBias Filter<a href="#" class="tooltip ui-btn  ui-corner-all ui-nodisc-icon ui-btn-inline ui-icon-info ui-btn-icon-notext my-tooltip-btn" title="filter the SNP variants if all variants found in one strand only of all mapped PE reads" ></a></legend>
+							<input type="radio" data-mini="true" name="edge-r2g-con-strandbiase-filter" id="edge-r2g-con-strandbiase-filter-sw1" value="1">
+							<label for="edge-r2g-con-strandbiase-filter-sw1">Yes</label>
+							<input type="radio" data-mini="true" name="edge-r2g-con-strandbiase-filter" id="edge-r2g-con-strandbiase-filter-sw2" value="0" checked='checked'>
+							<label for="edge-r2g-con-strandbiase-filter-sw2">No</label>
+						</fieldset>
+					</div>
 				</div>
 				<div class="ui-field-contain edge-fastq-options">
 					<label for="edge-r2g-aligner-options">Aligner Options<a href="#" class="tooltip ui-btn ui-corner-all ui-nodisc-icon ui-btn-inline ui-icon-info ui-btn-icon-notext my-tooltip-btn edge-aligner-options"></a></label>
