@@ -5,6 +5,7 @@ EDGE 2.4.1
 * Update align_trim and amplicov to deal with multi segment virus
 * udpate check PE fastq header, duplicate check
 * Add JBrowse on/off option
+* add homopolymer filter and strandBias filter for consensus workflow
 
 EDGE GUI 2.4.1
 * Extract mapped Diamond reads 
